--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,42 +1,50 @@
 #overlay {
-    position: fixed;
-    display: block;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(47, 46, 46, 0.5);
-    z-index: 2;
-    cursor: pointer;
-  }
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(47, 46, 46, 0.5);
+  z-index: 2;
+  cursor: pointer;
+}
   
-  a {
-    text-decoration: none;
-    font-family: 'Roboto', sans-serif;
-    background-color: #ffffff; 
-    border-radius: 0.475rem;
-    padding: 10px 20px;
-    color: #4285f4;
-  }
-  
-  a:hover {
-    color: #ffffff;
-    background-color: #4285f4;
-    font-size: 30px;
-  }
-  
-  #button-attendance {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-  }
+a, h2, p {
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  background-color: #ffffff; 
+  border-radius: 0.475rem;
+  padding: 10px 20px;
+  color: #4285f4;
+}
+
+a:hover {
+  color: #ffffff;
+  background-color: #4285f4;
+  font-size: 30px;
+}
+
+#button-attendance {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+}
+
+.heading-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+}
 
 @media (max-width: 576px) {
-  a {
+  a, h2 {
     font-size: 10px;
   }
 
@@ -46,7 +54,7 @@
 }
 
 @media (min-width: 576px) {
-  a {
+  a, h2, p {
     font-size: 20px;
   }
 
@@ -56,7 +64,7 @@
 }
 
 @media (min-width: 768px) {
-  a {
+  a, h2, p {
     font-size: 25px;
   }
 
@@ -66,7 +74,7 @@
 }
 
 @media (min-width: 992px) {
-  a {
+  a, h2, p {
     font-size: 30px;
   }
 
@@ -76,7 +84,7 @@
 }
 
 @media (min-width: 1200px) {
-  a {
+  a, h2, p {
     font-size: 40px;
   }
 
@@ -86,7 +94,7 @@
 }
 
 @media (min-width: 1400px) {
-  a {
+  a, h2, p {
     font-size: 50px;
   }
 
