--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/<%= files['cssFile'] %>">
-    <title>Tham gia sự kiện | Greenwich</title>
-</head>
-<body style="background: url('/img/university.jpg') no-repeat center fixed; background-size: cover;">
+    <title>Sự kiện | Greenwich</title>
+</head>                                                                                                                                                                                                                                            
+<body                                           
+  <% if (typeof(themeCheckingPage) !== 'undefined') { %>
+    style="background: url('<%= themeCheckingPage %>') no-repeat center fixed; background-size: cover;"
+  <% } else { %> 
+    style="background: url('/img/university.jpg') no-repeat center fixed; background-size: cover;"
+  <% } %> 
+  >
   <div id="overlay">
     <a href="/auth/google" id="button-attendance">Tham gia cùng chúng tôi 🎉</a>
   </div>
