--- a/template/event.ejs
+++ b/template/event.ejs
@@ -1,5 +1,5 @@
 <p>Chào bạn <b><%= fullname %></b> (<%= schoolId %>)
-<p>Cảm ơn bạn đã tham gia hoạt động sự kiện <%= eventName %>.</p>
+<p>Cảm ơn bạn đã tham gia hoạt động sự kiện <b><%= eventName %></b>.</p>
 <p>Chúc bạn sẽ có buổi tham sự kiện nhiều niềm vui và đầy ý nghĩa.</p>
 <br>
 <small>Attended at <%= time %></small>
