--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -14,7 +14,7 @@
 </head>                                                                                                                                                                                                                                            
 <body                                           
   <% if (typeof(themeCheckingPage) !== 'undefined') { %>
-    style="background: url('<%= themeCheckingPage %>') no-repeat center fixed; background-size: cover;"
+    style="background: url('<%= themeCheckingPage.photo %>') no-repeat center fixed; background-size: cover;"
   <% } else { %> 
     style="background: url('/img/university.jpg') no-repeat center fixed; background-size: cover;"
   <% } %> 
